<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeCalculator"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linerLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/firstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/lastOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1">
        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSumBTN"
            android:textSize="10pt"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDifBTN"
            android:textSize="10pt"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutChoiceOperator"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/resetBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTV"
        app:layout_constraintVertical_bias="0.1"/>




</androidx.constraintlayout.widget.ConstraintLayout>